--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Aguafina+Script"
+      rel="stylesheet"
+    />
 
     <title>Renai</title>
   </head>
